tests/error/move_across_while_loop_boundary.bz
// error: unable to move variable 'i', because it is outside a loop boundary
// note: variable was declared here
function test()
{
	let i = 0;
	while (true)
	{
		move i;
	}
}
